revisions to 2d chapter

--- a/2D.html
+++ b/2D.html
@@ -77,7 +77,7 @@
 		<p>
 			While all of these advances in display quality might appear only to effect the quality of a picture, they have had dramatic effects on user interfaces.
 			For example, none of the mobile devices in use today would be possible with CRT technology.
-			Screens would be far too big and far t0o inefficient to make mobile interaction possible.
+			Screens would be far too big and far too inefficient to make mobile interaction possible.
 			And some sizes of devices, like smartwatches, are only possible with LEDs: their thinness and energy efficiency make room for more battery, which is the critical limiting factor for such small devices.
 		</p>
 
@@ -244,7 +244,7 @@
 			These same ideas eventually led to more sophisticated animations of direct manipulation interfaces (<a href="https://doi.org/10.1145/215585.215628">Thomas and Calder 1995</a>), of icons (<a href="https://doi.org/10.1145/1978942.1979232">Harrison et al. 2011</a>), and of typography (<a href="https://doi.org/10.1145/571985.571997">Lee et al. 2002</a>).
 			These ideas coalesced into well-defined transition abstractions that made it easier to express a range of "emotions" through transitions, such as urgency, delay, and confidence (<a href="https://doi.org/10.1145/168642.168648">Hudson and Stasko 1993</a>).
 		</p>
-		
+
 		<p>
 			All of these research ideas are now ubiquitous in toolkits like Apple's <a href="https://developer.apple.com/library/content/documentation/Cocoa/Conceptual/CoreAnimation_guide/Introduction/Introduction.html">Core Animation</a>, which make it easy to express animation states without having to manage low-level details of user interface rendering.
 		</p>
