--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<td>Chapter 9. <a href="text-entry.html">Text entry</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 10. <a href="hands.html">Hands-based input</a></td>
+				<td>Chapter 10. <a href="hands.html">Hand-based input</a></td>
 			</tr>
 			<tr>
 				<td>Chapter 11. <a href="body.html">Body-based input</a></td>
