--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<td>Chapter 13. <a href="3D.html">3D visual output</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 14. <a href="physical.html">Physical output</a></td>
+				<td>Chapter 14. Physical output <!--<a href="physical.html">Physical output</a>--></td>
 			</tr>
 			<tr>
 				<td>Chapter 15. Help <!--<a href="help.html">Help</a>--></td>
