Finished draft of physical output.

--- a/hands.html
+++ b/hands.html
@@ -222,7 +222,7 @@
 
 		<p>Andrew M. Webb, Michel Pahud, Ken Hinckley, and Bill Buxton. 2016. <a href="https://doi.org/10.1145/2984511.2984564">Wearables as Context for Guiard-abiding Bimanual Touch</a>. In Proceedings of the 29th Annual Symposium on User Interface Software and Technology (UIST '16). ACM, New York, NY, USA, 287-300.</p>
 
-		<p>Weiser, M. (1991). The computer for the 21st century. Scientific American, 265(3), 94-104.</p>
+		<p>Weiser, M. (1991). <a href="http://www.jstor.org/stable/24938718">The computer for the 21st century</a>. Scientific American, 265(3), 94-104.</p>
 
 		<p>Andrew D. Wilson. 2006. <a href="https://doi.org/10.1145/1166253.1166292">Robust computer vision-based detection of pinching for one and two-handed gesture input</a>. In Proceedings of the 19th annual ACM symposium on User interface software and technology (UIST '06). ACM, New York, NY, USA, 255-258.</p>
 
