Text-entry chapter.

--- a/text-entry.html
+++ b/text-entry.html
@@ -135,7 +135,7 @@
 
 		<p>
 			With 2-4 years of training, some stenographers can reach 225 words per minute.
-			Researchers have adapted these techniques to other encodings, such as braille, to support non-visual text entry for people who are blind or low-vision (<a href="https://dl.acm.org/citation.cfm?id=2305297">Zenkot et al. 2012</a>)
+			Researchers have adapted these techniques to other encodings, such as braille, to support non-visual text entry for people who are blind or low-vision (<a href="https://dl.acm.org/citation.cfm?id=2305297">Azenkot et al. 2012</a>)
 		</p>
 		
 		<p class="embed-responsive embed-responsive-16by9">
