Clarified interaction on multitap.

--- a/text-entry.html
+++ b/text-entry.html
@@ -111,7 +111,8 @@
 		<p>
 			Cell phones in the early 21st century used a <strong>multitap</strong> method in which each key on a numeric keyboard mapped to three or four letters. 
 			To select the letter you wanted, you would press a key multiple times until the desired letter is displayed.
-			After a 1.5 second timeout (or by holding the button), the letter would be selected.
+			A letter was entered when a new key was struck.
+			If the next letter is on the same key as the previous letter, then the user must wait for a short timeout or hold down the key to commit the desired character.
 			Some researchers sped up multitap techniques like this by using other sensors, such as tilt sensors, making it faster to indicate a character (<a href="https://doi.org/10.1145/964696.964705">Wigdor and Balakrishnan 2003</a>).
 			Other researchers explored even more efficient forms of text entry with minimal keys, including one with only <em>4</em> keys, where characters are uniquely encoded as sequences of presses of those four keys (<a href="https://doi.org/10.1145/2047196.2047258">MacKenzie et al. 2011</a>).
 			On particularly small devices like smartwatches, some researchers have explored having the user move the <em>keyboard</em> to select the character they want (<a href="https://doi.org/10.1145/2984511.2984591">Shibata et al. 2016</a>).
