--- a/2D.html
+++ b/2D.html
@@ -75,7 +75,7 @@
 		</p>
 
 		<p>
-			While all of these advances in display quality might appear only to effect the quality of a picture, they have had dramatic effects on user interfaces.
+			While all of these advances in display quality might appear only to affect the quality of a picture, they have had dramatic effects on user interfaces.
 			For example, none of the mobile devices in use today would be possible with CRT technology.
 			Screens would be far too big and far too inefficient to make mobile interaction possible.
 			And some sizes of devices, like smartwatches, are only possible with LEDs: their thinness and energy efficiency make room for more battery, which is the critical limiting factor for such small devices.
@@ -107,7 +107,7 @@
 		</p>
 
 		<p>
-			These innovations promise to lead to entirely new product categories, just as all prior screen innovations have.
+			These display innovations promise to lead to entirely new product categories, just as all prior display innovations have removed constraints on the form and function of user interfaces.
 		</p>
 
 		<h2>Graphics</h2>
@@ -145,7 +145,7 @@
 
 		<p>
 			There are many techniques from computer graphics that ensure a high-level of graphical fidelity.
-			Color models, transparency, anti-aliasing, sub-pixels, double-buffering, interpolation, GPUs, or other strategies for ensuring precise, high-fidelity, high-performance of rendering of graphics ultimately help people focus on content rather than pixels.
+			Color models, transparency, anti-aliasing, sub-pixels, double-buffering, interpolation, GPUs, or other strategies for ensuring precise, high-fidelity, high-performance of <a href="https://en.wikipedia.org/wiki/Computer_graphics">computer graphics</a> ultimately help people focus on content rather than pixels.
 			These concepts do become important, however, if you're responsible for the graphic design portion of a user interface.
 		</p>
 
@@ -183,7 +183,7 @@
 		<p>
 			The second decision that helped bring typography to user interfaces was Steve Jobs taking a calligraphy course at Reed College (calligraphy is like typography, but by hand).
 			He saw that text could be art, that it could be expressive, and that it was central to differentiating the Mac from the full-text horrors of command lines.
-			And so when he saw Xerox PARC's use of typography and envisioned the Mac, type was at the center of his vision.]
+			And so when he saw Xerox PARC's use of typography and envisioned the Mac, type was <a href="https://www.hollywoodreporter.com/news/steve-jobs-death-apple-calligraphy-248900">at the center of his vision</a>.
 		</p>
 
 		<center>
