--- a/3D.html
+++ b/3D.html
@@ -226,7 +226,7 @@ That rhetoric has been quite present in recent VR culture, but there are no guar
 
 		<p>Akira Ishii, Ippei Suzuki, Shinji Sakamoto, Keita Kanai, Kazuki Takazawa, Hiraku Doi, and Yoichi Ochiai. 2016. <a href="https://doi.org/10.1145/2984511.2984545">Optical Marionette: Graphical Manipulation of Human's Walking Direction</a>. In Proceedings of the 29th Annual Symposium on User Interface Software and Technology (UIST '16). ACM, New York, NY, USA, 705-716.</p>
 
-		<p>P. Lensing and W. Broll, <a href="https://doi.org/10.1109/ISMAR.2012.6402547">"Instant indirect illumination for dynamic mixed reality scenes,"</a> 2012 IEEE International Symposium on Mixed and Augmented Reality (ISMAR), Atlanta, GA, 2012, pp. 109-118.</p>
+		<p>P. Lensing and W. Broll, <a href="https://doi.org/10.1109/ISMAR.2012.6402547">Instant indirect illumination for dynamic mixed reality scenes</a>. 2012 IEEE International Symposium on Mixed and Augmented Reality (ISMAR), Atlanta, GA, 2012, pp. 109-118.</p>
 
 		<p>Yuki Kon, Takuto Nakamura, and Hiroyuki Kajimoto. 2017. <a href="https://doi.org/10.1145/3084822.3084842">HangerOVER: HMD-embedded haptics display with hanger reflex</a>. In ACM SIGGRAPH 2017 Emerging Technologies (SIGGRAPH '17). ACM, New York, NY, USA, Article 11, 2 pages.</p>
 
@@ -242,13 +242,13 @@ That rhetoric has been quite present in recent VR culture, but there are no guar
 
 		<p>Pan, Z., Cheok, A. D., Yang, H., Zhu, J., & Shi, J. (2006). <a href="https://doi.org/10.1016/j.cag.2005.10.004">Virtual reality and mixed reality for virtual learning environments</a>. Computers & Graphics, 30(1), 20-28.</p>
 
-		<p>Samuel B. Schorr and Allison M. Okamura. 2017. <a href="https://doi.org/10.1145/3025453.3025744">Fingertip Tactile Devices for Virtual Object Manipulation and Exploration</a>. In Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems (CHI '17). ACM, New York, NY, USA, 3115-3119.</p> DOI:
+		<p>Samuel B. Schorr and Allison M. Okamura. 2017. <a href="https://doi.org/10.1145/3025453.3025744">Fingertip Tactile Devices for Virtual Object Manipulation and Exploration</a>. In Proceedings of the 2017 CHI Conference on Human Factors in Computing Systems (CHI '17). ACM, New York, NY, USA, 3115-3119.</p>
 
 		<p>Sito, T. (2013). Moving innovation: a history of computer animation. MIT Press.</p>
 
 		<p>Bruce H. Thomas and Paul Calder. 1995. <a href="http://dx.doi.org/10.1145/215585.215628">Animating direct manipulation interfaces</a>. In Proceedings of the 8th annual ACM symposium on User interface and software technology (UIST '95). ACM, New York, NY, USA, 3-12.</p>
 
-		<p>T. Richter-Trummer, D. Kalkofen, J. Park and D. Schmalstieg, <a href="https://doi.org/10.1109/ISMAR.2016.18">"Instant Mixed Reality Lighting from Casual Scanning,"</a> 2016 IEEE International Symposium on Mixed and Augmented Reality (ISMAR), Merida, 2016, pp. 27-36.</p>
+		<p>T. Richter-Trummer, D. Kalkofen, J. Park and D. Schmalstieg, <a href="https://doi.org/10.1109/ISMAR.2016.18">Instant Mixed Reality Lighting from Casual Scanning</a>. 2016 IEEE International Symposium on Mixed and Augmented Reality (ISMAR), Merida, 2016, pp. 27-36.</p>
 
 		<p>Eric Whitmire, Mohit Jain, Divye Jain, Greg Nelson, Ravi Karkar, Shwetak Patel, and Mayank Goel. 2017. <a href="https://doi.org/10.1145/3130978">DigiTouch: Reconfigurable Thumb-to-Finger Input and Text Entry on Head-mounted Displays</a>. Proc. ACM Interact. Mob. Wearable Ubiquitous Technol. 1, 3, Article 113 (September 2017), 21 pages.</p>
 
