--- a/2D.html
+++ b/2D.html
@@ -199,7 +199,7 @@
 
 		<p>
 			Research on the <em>technology</em> of typography often focuses on readability.
-			For example, Microsoft, including researchers from Microsoft Research, developed a sub-pixel font rendering algorithm called ClearType, which they found significantly increased average reading time (<a href="https://doi.org/10.1145/1124772.1124849">Dillon et al. 2006</a>).
+			For example, Microsoft, including researchers from Microsoft Research, developed a sub-pixel font rendering algorithm called ClearType, which they found significantly decreased average reading time (<a href="https://doi.org/10.1145/1124772.1124849">Dillon et al. 2006</a>).
 		</p>
 
 		<h2>Data</h2>
