Linked to final chapters.

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 				<td>Chapter 14. <a href="physical.html">Physical output</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 15. Help <!--<a href="help.html">Help</a>--></td>
+				<td>Chapter 15. <a href="help.html">Help</a></td>
 			</tr>
 			<tr>
-				<td>Chapter 16. Intellectual property<!--<a href="intellectual-property.html">Intellectual property</a>--></td>
+				<td>Chapter 16. <a href="ip.html">Intellectual property</a></td>
 			</tr>
 		</table>
 
