--- a/ip.html
+++ b/ip.html
@@ -104,7 +104,7 @@
 			For example, academic inventors, subsidized by their teaching efforts, follow their curiosity, invent things that may be of public value, and then often share them for free with the world.
 			This can occur because their time is otherwise subsidized and they may not care about accruing wealth as much as they do having time to follow their curiosity.
 			Other inventors might be motivated by the public good.
-			For example, Elon Musk shared his idea for the "hyperloop" (TODO) without expectation of credit or compensation because he wanted the world to investigate it, but he didn't want to investigate it with his own resources.
+			For example, Elon Musk shared his idea for the <a href="https://www.tesla.com/sites/default/files/blog_attachments/hyperloop_alpha3.pdf">hyperloop</a> without expectation of credit or compensation because he wanted the world to investigate it, but he didn't want to investigate it with his own resources.
 			Therefore, while some inventors will be motivated by compensation, much innovation will happen even in the absence of the incentives that come with ownership.
 		</p>
 
