Fixed a broken link.

--- a/physical.html
+++ b/physical.html
@@ -196,7 +196,7 @@
 
 		<h2>Further reading</h2>
 
-		<p>Parastoo Abtahi, and Sean Follmer. 2018. <a href="https://doi.org/10.1145/3173574.3173724">Visuo-haptic Illusions for Improving the Perceived Performance of Shape Displays</a>. In Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems (CHI '18). ACM, New York, NY, USA.</p>
+		<p>Parastoo Abtahi, and Sean Follmer. 2018. <a href="http://hci.stanford.edu/publications/2018/haptic_illusions/Haptic_Illusions_paper.pdf">Visuo-haptic Illusions for Improving the Perceived Performance of Shape Displays</a>. In Proceedings of the 2018 CHI Conference on Human Factors in Computing Systems (CHI '18). ACM, New York, NY, USA.</p>
 
 		<p>Olivier Bau, Ivan Poupyrev, Ali Israr, and Chris Harrison. 2010. <a href="https://doi.org/10.1145/1866029.1866074">TeslaTouch: electrovibration for touch surfaces</a>. In Proceedings of the 23nd annual ACM symposium on User interface software and technology (UIST '10). ACM, New York, NY, USA, 283-292.</p>
 
