Revised IP chapter for clarity.

--- a/ip.html
+++ b/ip.html
@@ -139,14 +139,17 @@
 		<p>
 			In addition to copyrights, U.S. law also explicitly grants limited ownership of ideas themselves in the form of <strong>patents</strong>.
 			Getting a patent requires writing a description of what constitutes the essence of the idea; this description must come in the form of "claims" about how the idea works, and those claims must differ "substantially" from the claims of prior patents.
+			Once granted, a patent holder can control who can and cannot "use" the idea in products, services, and other copyrighted material.
+			This protection currently lasts for 20 years, after which the idea enters the <strong>public domain</strong>, and can be used by anyone.
+		
+		<p>
 			In addition to demonstrating novelty beyond prior patents, what categories of ideas can be patented is constantly in flux because of ambiguous language in patent law.
 			At the time of this writing, for example, algorithms are still technically patentable, but there is a clear trend in the decisions of the U.S. Supreme Court of eroding protections for algorithms.
 			This ambiguity emerges from the inherent ambiguity of what constitutes an idea.
-			Once granted, a patent holder can control who can and cannot "use" the idea in products, services, and other copyrighted material.
 		</p>
 
 		<p>
-			There are also many rules about <em>when</em> something can be patented: if it has been in the "public domain" for more than a year in the U.S., it is considered public domain.
+			There are also many rules about <em>when</em> something can be patented: if it has been in the public domain for more than a year in the U.S., it is considered public domain, and cannot be patented.
 			Inventors in the U.S. are often encouraged to write provisional patents, which give a partial specification of an idea, giving the inventors a year to write the full patent, while also declaring to the world that they were the first to own the idea.
 			If the provisional patent expires without a full patent application being submitted, then the idea enters the public domain.
 			Otherwise, the application process proceeds (often for years), while the patent examiner’s office assesses the novelty relative to prior patents and other inventions.
@@ -222,15 +225,15 @@
 
 		<p>
 			In her review of the rulings, Samuelson argued that while there may be something valuable about look and feel, copyright law was not the right way to protect it, particularly because the artistic and functional aspects could not be separated (<a href="https://doi.org/10.1145/130994.131009">Samuelson 1992</a>, <a href="https://doi.org/10.1145/255950.153595">Samuelson 1993</a>).
-			After all, copyright law tends to protect look, patent law tends to protect feel, and so unifying them as a single concept of look and feel is in conflict with two mutually exclusive forms of ownership.
+			After all, copyright law tends to protect "look," patent law tends to protect "feel," and so unifying them as a single concept of look and feel is in conflict with two mutually exclusive forms of ownership.
 		</p>
 
 		<p>
-			Interestingly, after this suit, Apple and Microsoft resolved their conflict without the courts.
+			Interestingly, after this suit, Apple and Microsoft resolved their conflict outside of court.
 			Apple agreed to make Internet Explorer their default browser; Microsoft agreed to continue developing Office for Mac.
 			Microsoft bought $150 million of non-voting Apple stock.
 			They even decided to agree to a patent cross-licensing agreement in which certain innovations would be shared between the two companies.
-			Both mutually agreed that rather than spending hundreds of millions of dollars on lawyers, their investments would be more valuable as partnership.
+			Both mutually agreed that rather than spending hundreds of millions of dollars on lawyers, they would spend hundreds of millions of dollars on partnership.
 		</p>
 
 		<h2>What is the effect of interface idea ownership on innovation?</h2>
